--- a/k8s/webapp-service.yaml
+++ b/k8s/webapp-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  name: my-app-service2
 spec:
   selector:
-    app: my-app
+    app: my-app2
   ports:
     - port: 80
       targetPort: 8080
