--- a/k8s/pvc.yaml
+++ b/k8s/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongo-pvc
+  name: mongo-pvc2
 spec:
   accessModes:
     - ReadWriteOnce
