--- a/k8s/webapp.yaml
+++ b/k8s/webapp.yaml
@@ -25,5 +25,5 @@ spec:
             - containerPort: 8080
           env:
             - name: MONGO_URL
-              value: mongodb://my-db-service:27017/dev
+              value: mongodb://my-db-service2:27017/dev
           imagePullPolicy: Always
